# misuta-robotto

./: .gitattributes  .gitignore  LICENSE.md  Makefile  README.md  compile_opencv.bat
src/MisutaRobotto/: .gitignore
src/MisutaRobotto/Assets/: Main menu.unity  Scene.unity
src/MisutaRobotto/Assets/Editor/: BuildScript.cs
src/MisutaRobotto/Assets/Materials/: Robot_Color.mat  defaultPolygonShader.mat  unnamed.mat
src/MisutaRobotto/ProjectSettings/: ProjectSettings.asset
src/Product/Assets/: BlurredCameraMaterial.mat  CameraImageMaterial.mat  DisplayWebcam.cs  IPandPort.cs  InsideShader.shader  Main menu.unity  Scene.unity  pad.cs  toCamera.cs
src/Product/Assets/Editor/: BuildScript.cs
src/Product/ProjectSettings/: ProjectSettings.asset  QualitySettings.asset
src/RenderingPlugin/projects/GNUMake/: Makefile
src/RenderingPlugin/projects/VisualStudio2015/: RenderingPlugin.vcxproj
src/RenderingPlugin/source/: RenderingPlugin.def
src/bridge/: README.md  build.bat
src/bridge/cpp/: .gitignore  CMakeLists.txt  almotionproxy.cpp  almotionproxy.h  alvalue.cpp  alvalue.h  build.bat  build.sh  configure.bat  configure.sh  naobridge.h  naobridge_impl.h  qiproject.xml
src/bridge/csharp/: ALMotionProxy.cs  ALValue.cs  MOVED.txt
src/experiment/GUI/: Assembly-CSharp.csproj  GUI.csproj  GUI.sln  New Unity Project.sln
src/experiment/GUI/Assets/: DisplayWebcam.cs  IPandPort.cs  Main menu.unity  movementMode.cs  toCamera.cs
src/experiment/IKtest/Assets/: ArmAnimation.cs  Robot_Controller.controller  Scene.unity
src/experiment/opencv/: main.cpp
(+86 files in other folders)
